# Fiu

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  Example.lua  LICENSE  README.md  Source.lua  foreman.toml
tests/: CMakeLists.txt  Config.h  Config.lua  Config.luau  TestRunner.lua  TestRunner.luau  main.cpp
tests/Benchmarks/: maxcstack.lua
tests/Benchmarks/Speeds/: closure.lua  table.lua
tests/Conformance/: assert.lua  attrib.lua  basic.lua  bitwise.lua  buffers.lua  calls.lua  clear.lua  constructs.lua  coroutine.lua  datetime.lua  ifelseexpr.lua  iter.lua  literals.lua  locals.lua  math.lua  move.lua  pm.lua  sort.lua  strconv.lua  stringinterp.lua  strings.lua  tables.lua  tpack.lua  utf8.lua  vararg.lua
tests/Conformance/Emulated/: Coverage.lua
tests/Conformance/Instructions/: Calls.lua  Constants.lua  DupClosure.lua  Lists.lua  Logic.lua  Loops.lua  (+6 more)
tests/Specs/: Vector.lua  coverage.lua  decodeOp.lua  encodeOp.lua  extensions.lua  importConstants.lua  nativeNamecall.lua  vectorLib.lua
tests/Staging/: AndOr.lua  AndOrK.lua  Arit.lua  AritK.lua  BasicJump.lua  Booleans.lua  BufferIssue.lua  CLOSE.lua  Closure.lua  Concat.lua  Conditions.lua  DupTableSetList.lua  ForLoops.lua  FunctionIssue.lua  GenericFor.lua  GetImportSpecial.lua  Globals.lua  HelloWorld.lua  Issue4.lua  Issue5.lua  LOADN.lua  LOADNIL.lua  Namecall.lua  Returns.lua  Tables.lua  Unary.lua  Varargs.lua  WhileRepeat.lua
tests/Utils/: Context.h  Enviroment.lua  Enviroment.luau  Files.lua  Files.luau  Fiu.h  Formatter.h  Formatter.lua  Translation.lua  uformat.h
(+28 files in other folders)
